[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Hex Drone.png" type="Texture" id=1]
[ext_resource path="res://Menus/Fonts/SubHeader.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/Fonts/PageHeader.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menus/Fonts/MiniUIFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menus/Operations/Assigner.gd" type="Script" id=5]
[ext_resource path="res://Menus/Operations/AvailibleDroneLabel.gd" type="Script" id=8]
[ext_resource path="res://Menus/BackButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Menus/UITheme.tres" type="Theme" id=10]
[ext_resource path="res://Menus/ActionBoxTheme.tres" type="Theme" id=11]
[ext_resource path="res://Menus/SceneSwitching.gd" type="Script" id=12]
[ext_resource path="res://Menus/Character.gd" type="Script" id=13]
[ext_resource path="res://Assets/Hex Drone.bmp" type="BitMap" id=14]
[ext_resource path="res://Menus/Operations/AssignToggle.gd" type="Script" id=15]

[node name="Operations" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hex Drone" type="TextureButton" parent="."]
margin_right = 706.448
margin_bottom = 1828.3
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_click_mask = ExtResource( 14 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
text = [ "Greetings, secretary.", "Unit is standing by.", "Ready to receive orders.", "How might this unit obey?" ]

[node name="TextBoxHolder" type="Control" parent="Hex Drone"]
anchor_left = 0.228
anchor_top = 0.195
anchor_right = 0.708
anchor_bottom = 0.219
margin_left = -1.00806
margin_top = 14.71
margin_right = -0.287964
margin_bottom = -3.01807
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" parent="." instance=ExtResource( 9 )]

[node name="Label2" type="Label" parent="."]
margin_left = 928.31
margin_top = 50.7253
margin_right = 1883.31
margin_bottom = 226.725
custom_fonts/font = ExtResource( 3 )
text = "OPERATIONS"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 726.0
margin_top = 200.0
margin_right = 1883.0
margin_bottom = 312.0
text = "Drone extended wireless mind control and management facility "
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1072.0
margin_top = 274.0
margin_right = 1905.0
margin_bottom = 1002.0
custom_constants/separation = 85
alignment = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MaterialContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 782.0
margin_bottom = 186.0
hint_tooltip = "this is a test tooltip"
size_flags_horizontal = 0
theme = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MaterialContainer" groups=[
"display",
"materials",
"operations",
]]
margin_left = 2.0
margin_top = 2.0
margin_right = 780.0
margin_bottom = 184.0
size_flags_horizontal = 3
custom_constants/separation = -23
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MaterialContainer/HBoxContainer"]
margin_right = 547.0
margin_bottom = 182.0
custom_constants/separation = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/MaterialContainer/HBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 547.0
margin_bottom = 81.0
size_flags_vertical = 1
text = "Material Acquisition"

[node name="Label2" type="Label" parent="VBoxContainer/MaterialContainer/HBoxContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 547.0
margin_bottom = 150.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "Materials per second: X.XXXX +(X.XXXX)
Drones Assigned: x.xxxX"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MaterialContainer/HBoxContainer"]
margin_left = 524.0
margin_right = 778.0
margin_bottom = 182.0
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 2

[node name="Assign1" type="Button" parent="VBoxContainer/MaterialContainer/HBoxContainer/GridContainer"]
margin_right = 118.0
margin_bottom = 85.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "+1"

[node name="Assign10" type="Button" parent="VBoxContainer/MaterialContainer/HBoxContainer/GridContainer"]
margin_left = 130.0
margin_right = 254.0
margin_bottom = 85.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = " +10  "

[node name="Assign100" type="Button" parent="VBoxContainer/MaterialContainer/HBoxContainer/GridContainer"]
margin_top = 97.0
margin_right = 118.0
margin_bottom = 182.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "+100"

[node name="Assign1K" type="Button" parent="VBoxContainer/MaterialContainer/HBoxContainer/GridContainer"]
margin_left = 130.0
margin_top = 97.0
margin_right = 254.0
margin_bottom = 182.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = " +1K "

[node name="BuisnessContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 271.0
margin_right = 660.0
margin_bottom = 457.0
size_flags_horizontal = 0
theme = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BuisnessContainer" groups=[
"display",
"money",
"operations",
]]
margin_left = 2.0
margin_top = 2.0
margin_right = 658.0
margin_bottom = 184.0
size_flags_horizontal = 3
custom_constants/separation = 4
script = ExtResource( 5 )
resource_name = "Money"
assign_var = "assigned_drones_money"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BuisnessContainer/HBoxContainer"]
margin_right = 398.0
margin_bottom = 182.0
custom_constants/separation = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/BuisnessContainer/HBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 398.0
margin_bottom = 81.0
text = "Business Integration"

[node name="Label2" type="Label" parent="VBoxContainer/BuisnessContainer/HBoxContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 398.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 4 )
text = "Money per second: xxx +(xx)
Drones Assigned xxx +(xx)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/BuisnessContainer/HBoxContainer"]
margin_left = 402.0
margin_right = 656.0
margin_bottom = 182.0
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 2

[node name="Assign1" type="Button" parent="VBoxContainer/BuisnessContainer/HBoxContainer/GridContainer"]
margin_right = 118.0
margin_bottom = 85.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = " +1 "

[node name="Assign10" type="Button" parent="VBoxContainer/BuisnessContainer/HBoxContainer/GridContainer"]
margin_left = 130.0
margin_right = 254.0
margin_bottom = 85.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = " +10  "

[node name="Assign100" type="Button" parent="VBoxContainer/BuisnessContainer/HBoxContainer/GridContainer"]
margin_top = 97.0
margin_right = 118.0
margin_bottom = 182.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "+100"

[node name="Assign1K" type="Button" parent="VBoxContainer/BuisnessContainer/HBoxContainer/GridContainer"]
margin_left = 130.0
margin_top = 97.0
margin_right = 254.0
margin_bottom = 182.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = " +1K  "

[node name="ScienceContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 542.0
margin_right = 685.0
margin_bottom = 728.0
size_flags_horizontal = 0
theme = ExtResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScienceContainer" groups=[
"display",
"operations",
"science",
]]
margin_left = 2.0
margin_top = 2.0
margin_right = 683.0
margin_bottom = 184.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 0
script = ExtResource( 5 )
resource_name = "Science"
assign_var = "assigned_drones_science"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScienceContainer/HBoxContainer"]
margin_right = 407.0
margin_bottom = 182.0
custom_constants/separation = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ScienceContainer/HBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 407.0
margin_bottom = 81.0
text = "Experimentation"

[node name="Label2" type="Label" parent="VBoxContainer/ScienceContainer/HBoxContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 407.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 4 )
text = "Science per second: xxx +(xx)
Drones Assigned xxx +(xx)"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScienceContainer/HBoxContainer"]
margin_left = 407.0
margin_right = 681.0
margin_bottom = 182.0
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 2

[node name="Assign1" type="Button" parent="VBoxContainer/ScienceContainer/HBoxContainer/GridContainer"]
margin_right = 128.0
margin_bottom = 85.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "  +1  "

[node name="Assign10" type="Button" parent="VBoxContainer/ScienceContainer/HBoxContainer/GridContainer"]
margin_left = 140.0
margin_right = 274.0
margin_bottom = 85.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "  +10  "

[node name="Assign100" type="Button" parent="VBoxContainer/ScienceContainer/HBoxContainer/GridContainer"]
margin_top = 97.0
margin_right = 128.0
margin_bottom = 182.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = " +100"

[node name="Assign1K" type="Button" parent="VBoxContainer/ScienceContainer/HBoxContainer/GridContainer"]
margin_left = 140.0
margin_top = 97.0
margin_right = 274.0
margin_bottom = 182.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = " +1K "

[node name="Label" type="Label" parent="." groups=[
"tickable",
]]
margin_left = 461.48
margin_top = 252.155
margin_right = 1072.48
margin_bottom = 433.155
custom_fonts/font = ExtResource( 2 )
text = "Drones Available:
 X.XXXX"
align = 1
autowrap = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AssignToggle" type="Button" parent="."]
margin_left = 648.0
margin_top = 697.0
margin_right = 940.0
margin_bottom = 782.0
text = "Deassign Drones"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Back" to="." method="_on_back"]
[connection signal="pressed" from="VBoxContainer/MaterialContainer/HBoxContainer/GridContainer/Assign1" to="VBoxContainer/MaterialContainer/HBoxContainer" method="_assign" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/MaterialContainer/HBoxContainer/GridContainer/Assign10" to="VBoxContainer/MaterialContainer/HBoxContainer" method="_assign" binds= [ 10 ]]
[connection signal="pressed" from="VBoxContainer/MaterialContainer/HBoxContainer/GridContainer/Assign100" to="VBoxContainer/MaterialContainer/HBoxContainer" method="_assign" binds= [ 100 ]]
[connection signal="pressed" from="VBoxContainer/MaterialContainer/HBoxContainer/GridContainer/Assign1K" to="VBoxContainer/MaterialContainer/HBoxContainer" method="_assign" binds= [ 1000 ]]
[connection signal="pressed" from="VBoxContainer/BuisnessContainer/HBoxContainer/GridContainer/Assign1" to="VBoxContainer/BuisnessContainer/HBoxContainer" method="_assign" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/BuisnessContainer/HBoxContainer/GridContainer/Assign10" to="VBoxContainer/BuisnessContainer/HBoxContainer" method="_assign" binds= [ 10 ]]
[connection signal="pressed" from="VBoxContainer/BuisnessContainer/HBoxContainer/GridContainer/Assign100" to="VBoxContainer/BuisnessContainer/HBoxContainer" method="_assign" binds= [ 100 ]]
[connection signal="pressed" from="VBoxContainer/BuisnessContainer/HBoxContainer/GridContainer/Assign1K" to="VBoxContainer/BuisnessContainer/HBoxContainer" method="_assign" binds= [ 1000 ]]
[connection signal="pressed" from="VBoxContainer/ScienceContainer/HBoxContainer/GridContainer/Assign1" to="VBoxContainer/ScienceContainer/HBoxContainer" method="_assign" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/ScienceContainer/HBoxContainer/GridContainer/Assign10" to="VBoxContainer/ScienceContainer/HBoxContainer" method="_assign" binds= [ 10 ]]
[connection signal="pressed" from="VBoxContainer/ScienceContainer/HBoxContainer/GridContainer/Assign100" to="VBoxContainer/ScienceContainer/HBoxContainer" method="_assign" binds= [ 100 ]]
[connection signal="pressed" from="VBoxContainer/ScienceContainer/HBoxContainer/GridContainer/Assign1K" to="VBoxContainer/ScienceContainer/HBoxContainer" method="_assign" binds= [ 1000 ]]
